# Henkel_Chatbot

./: .dockerignore  .env.example  Dockerfile  README.md  app.py  main.py  pyproject.toml  rag.py
