[project]
name = "henkel-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "ipython>=9.14.1",
    "langchain>=1.3.10",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.6",
    "streamlit>=1.58.0",
]
